Opening social links in new windows. Fixed Twitter account page

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,6 @@ permalink: pretty
 
 social:
   - title: twitter
-    url: https://twitter.com/inquisitivethinking
+    url: https://twitter.com/inquisitiveltd
   - title: linkedin
     url: https://uk.linkedin.com/pub/eva-villarroya/8/69/887
