--- a/_config.yml
+++ b/_config.yml
@@ -24,4 +24,4 @@ social:
   - title: twitter
     url: https://twitter.com/inquisitiveltd
   - title: linkedin
-    url: https://uk.linkedin.com/pub/eva-villarroya/8/69/887
+    url: https://www.linkedin.com/in/eva-v-8870698
